--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+  	"start": "node ./bin/www",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongoose": "^4.2.6",
